tests/test_assets/semantic/invalid/expressions/unary_minus_unsigned_constant.cog
VALUE_U8: u8 : 1;
VALUE_U16: u16 : 1;
VALUE_U32: u32 : 1;
VALUE_U64: u64 : 1;

NEGATIVE_U8 :: -VALUE_U8;
NEGATIVE_U16 :: -VALUE_U16;
NEGATIVE_U32 :: -VALUE_U32;
NEGATIVE_U64 :: -VALUE_U64;
